################################################################################
#                           nxAutoNuke - Change Log                            #
################################################################################

nxAutoNuke v2.4.0 (Apr 5, 2006):
  NEW: Announce warning types for a release once, per execution and/or release.
  CHG: Several options renamed, be sure to update your configuration file.
  FIX: Properly update nuke records when directory renaming fails.

nxAutoNuke v2.3.1 (Mar 6, 2006):
  NEW: Check for incomplete directory tags.

nxAutoNuke v2.3.0 (Oct 29, 2005):
  NEW: Example directory tag patterns in the readme (section 3).
  NEW: Improved error logging when incorrect settings are detected.
  NEW: Minimum and maximum bitrate for MP3 releases.
  NEW: Minimum and maximum size enforcements for releases.
  CHG: Minor clean-ups to the default configuration file.
  CHG: Moved configuration to the nxAutoNuke directory.
  CHG: Verify the parsed IMDB and MP3 values before comparing them.

nxAutoNuke v2.2.0 (Oct 12, 2005):
  NEW: Moved to the modified BSD license.
  CHG: Removed dZSbot support, only AlcoBot is supported now.
  FIX: Convert the list of nuked users into a string when logging them.
  FIX: The script failed if a section had the wrong number of options.

nxAutoNuke v2.1.0 (Aug 11, 2005):
  NEW: Updated to work with nxTools v0.9.11.
  CHG: The ioA version is distributed separately now.

nxAutoNuke v2.0.2 (Apr 03, 2005):
  FIX: An incorrect cookie was used for the ANUKEKEYWORD bot skin.
  FIX: Nuke times were shown in seconds instead of minutes for nxTools/dZSbot announces.

nxAutoNuke v2.0.1 (Mar 28, 2005):
  FIX: Fixed a few typos.
  FIX: Forgot to remove some debug code (again).

nxAutoNuke v2.0.0 (Mar 27, 2005):
  NEW: Installation instructions for nxTools and dZSbot.
  CHG: Nearly configuration options have changed.
  CHG: Redesigned nxAutoNuke, much more efficient now.